@@ -93,6 +93,8 @@ PHP                                                                        NEWS
   (David C.)
 - Fixed bug #44154 (pdo->errorInfo() always have three elements in the
   returned array). (David C.)
+- Fixed bug #41534 (SoapClient over HTTPS fails to reestablish connection).
+  (Dmitry)
 
 
 02 Sep 2008, PHP 5.3.0 Alpha 2
